added a code box

--- a/example.ipynb
+++ b/example.ipynb
@@ -21,6 +21,14 @@
     "\n",
     "print(\"Hello World\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "def f(x):\n",
+    "r"
+   ]
   }
  ],
  "metadata": {
